--- a/test.html
+++ b/test.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <textarea id="inputTextarea" rows="8" cols="30" placeholder="Enter a string per line"></textarea>
+    <input type="text" id="titleInput" placeholder="Enter a title">
+
+    <textarea id="inputTextarea" name="inputText" rows="8" cols="30" placeholder="Enter a string per line"></textarea>
 
     <button onclick="generatePDF()">Generate PDF</button>
 
@@ -23,8 +25,10 @@
             // Clear the previous content
             pdfContainer.innerHTML = '';
 
-            // Get the input string from the textarea
+            // Get the title and input string from the input and textarea
+            const titleInput = document.getElementById('titleInput');
             const inputTextarea = document.getElementById('inputTextarea');
+            const title = titleInput.value.trim();
             const lines = inputTextarea.value.split('\n');
 
             // Create a table and append it to the container
@@ -39,20 +43,40 @@
                 for (let j = 0; j < 2; j++) {
                     const cell = row.insertCell(j);
                     cell.className = 'pdfCell';
-                    const line = lines[i + j] || '';  // Use empty string if line is undefined
-                    cell.textContent = line.trim();
+
+                    // Add title
+                    const titleLabel = document.createElement('div');
+                    titleLabel.className = 'titleLabel';
+                    titleLabel.textContent = title;
+                    cell.appendChild(titleLabel);
+
+                    // Add string per line
+                    const lineLabel = document.createElement('div');
+                    lineLabel.className = 'lineLabel';
+                    const line = lines[i + j] || '';
+                    lineLabel.textContent = line.trim();
+                    cell.appendChild(lineLabel);
 
                     // Add current number/total count in the top right corner with padding
                     const countLabel = document.createElement('div');
                     countLabel.className = 'countLabel';
-                    countLabel.textContent = `${i + j + 1}/${lines.length}`;
+                    countLabel.textContent = `${i + j }/${lines.length}`;
                     cell.appendChild(countLabel);
 
                     // Add percentage value with bordered progress bar
+                    const progressBarContainer = document.createElement('div');
+                    progressBarContainer.className = 'progressBarContainer';
+
+                    // Add percentage value
                     const percentageLabel = document.createElement('div');
                     percentageLabel.className = 'percentageLabel';
-                    const percentage = ((i + j + 1) / lines.length) * 100;
-                    percentageLabel.innerHTML = `Percentage: ${percentage.toFixed(2)}%<br><div class="progressBarContainer"><div class="progressBar" style="width: ${percentage}%"></div></div>`;
+                    const progressBar = document.createElement('div');
+                    progressBar.className = 'progressBar';
+                    const percentage = ((i + j) / lines.length) * 100;
+                    progressBar.style.width = `${(percentage - 2)>0?percentage - 2 : 0}%`; // Adjust width
+                    progressBarContainer.appendChild(progressBar);
+                    cell.appendChild(progressBarContainer);
+                    percentageLabel.textContent = `${percentage.toFixed(2)}%`;
                     cell.appendChild(percentageLabel);
                 }
             }
@@ -67,7 +91,7 @@
             };
 
             // Use html2pdf to generate and download the PDF
-            html2pdf(pdfContainer, options);
+            html2pdf(table, options); // Pass 'table' instead of 'pdfContainer'
         }
     </script>
 
@@ -82,19 +106,28 @@
 
         table {
             width: 210mm; /* A4 width */
-            height: 73.4mm; /* A4 height divided by 4 rows */
+            height: 297mm; /* A4 height divided by 4 rows */
             border-collapse: collapse;
         }
 
         .pdfCell {
             position: relative;
             width: 50%;
-            height: 73.4mm; /* Adjust the height as needed */
+            height: 74.23mm; /* Adjust the height as needed */
             border: 1px solid black;
-            text-align: center;
-            vertical-align: middle;
-            font-size: 20px;
+            text-align: left;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+
+        .titleLabel {
+            font-size: 16px;
             font-weight: bold;
+            margin-bottom: 1px;
+        }
+
+        .lineLabel {
+            font-size: 14px;
         }
 
         .countLabel, .percentageLabel {
@@ -104,27 +137,31 @@
         }
 
         .countLabel {
-            top: 10px;
-            right: 10px;
-        }
-
-        .percentageLabel {
-            bottom: 10px;
-            left: 10px;
+            top: 25px;
+            right: 25px;
         }
 
         .progressBarContainer {
-            height: 20px; /* Adjust the height as needed */
+            height: 20px; /* Increased height */
             border: 1px solid #000;
             position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
+            bottom: 34px; /* Adjusted bottom position */
+            left: 10px; /* Adjusted left position */
+            width: calc(100% - 20px); /* Adjusted width */
         }
 
         .progressBar {
             height: 100%;
             background-color: #4CAF50;
+        }
+
+        .percentageLabel {
+            position: absolute;
+            bottom: 15px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 12px;
+            color: #555;
         }
     </style>
 
