--- a/4x2.html
+++ b/4x2.html
@@ -89,7 +89,7 @@
             // Options for html2pdf
             const options = {
                 margin: 0,
-                filename: 'divided_page.pdf',
+                filename: `${title}-4x2.pdf`,
                 image: { type: 'jpeg', quality: 0.98 },
                 html2canvas: { scale: 2 },
                 jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
