added file names

--- a/4x4.html
+++ b/4x4.html
@@ -93,7 +93,7 @@
             // Options for html2pdf
             const options = {
                 margin: 0,
-                filename: `${title}-4x4.pdf`,
+                filename: `landscape-${title}-4x4.pdf`,
                 image: { type: 'jpeg', quality: 0.98 },
                 html2canvas: { scale: 1 , scrollY:0},
                 jsPDF: { unit: 'mm', format: 'a4', orientation: 'landscape' }
