--- a/shaadi-slips-8x3.html
+++ b/shaadi-slips-8x3.html
@@ -58,7 +58,7 @@
         // Options for html2pdf
         const options = {
           margin: 0,
-          filename: `landscape-${title}-4x4.pdf`,
+          filename: `shadi-slips-8x3.pdf`,
           image: { type: 'jpeg', quality: 0.98 },
 		      // scrollY is addded because html2pdf was itself rendering away from page start
           html2canvas: { scale: 1 , scrollY:0},
@@ -89,7 +89,6 @@
           position: relative;
           width: 70mm;
           height: 37.13mm; /* Adjust the height as needed */
-          border: 1px solid black;
           text-align: left;
           padding: 30px;
 	        padding-left: 50px;
